--- a/views/data.tt
+++ b/views/data.tt
@@ -119,8 +119,8 @@
                                 [% sel_type = "records in this view" %]
                             [% END %]
                             [% IF layout.user_can("bulk_update") %]
-                                <li role="presentation"><a role="menuitem" id="update_href" class="bulk_href" tabindex="-1" href="/bulk/update/">Update all [% sel_type %]...</a></li>
-                                <li role="presentation"><a role="menuitem" id="clone_href" class="bulk_href" tabindex="-1" href="/bulk/clone/">Clone all [% sel_type %]...</a></li>
+                                <li role="presentation"><a role="menuitem" id="update_href" class="bulk_href" tabindex="-1" href="/[% layout.identifier %]/bulk/update/">Update all [% sel_type %]...</a></li>
+                                <li role="presentation"><a role="menuitem" id="clone_href" class="bulk_href" tabindex="-1" href="/[% layout.identifier %]/bulk/clone/">Clone all [% sel_type %]...</a></li>
                             [% END %]
                             [% IF layout.user_can("delete") %]
                                 <li role="presentation"><a role="menuitem" id="delete_href" class="bulk_href" tabindex="-1" data-toggle="modal" data-target="#modal_delete" style="cursor: pointer">Delete all [% sel_type %]...</a>
