--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -80,7 +80,9 @@
         <![endif]-->
     </head>
 
-    <body class="page [% page %]" data-page="[% page %]" data-csrf-token="[% csrf_token %]" style="font-size:15px">
+    <body class="page [% page %]" data-page="[% page %]" data-csrf-token="[% csrf_token %]"
+        data-layout-identifier="[% layout.identifier %]" style="font-size:15px"
+    >
         <header role="banner" class="container">
         [% IF header AND NOT page_as_mech %]
             <p class="text-center">[% header %]</p>
