--- a/views/purge.tt
+++ b/views/purge.tt
@@ -17,7 +17,7 @@
             [% FOREACH record IN records %]
                 <tr>
                     <td><input class="record_selected" type="checkbox" name="record_selected" value="[% record.current_id %]"></td>
-                    <td><a href="/purge/[% record.current_id %]">[% record.current_id %]</a></td>
+                    <td><a href="/[% layout.identifier %]/purge/[% record.current_id %]">[% record.current_id %]</a></td>
                     <td>[% record.deleted %] by [% record.deletedby | html %]</td>
                 </tr>
             [% END %]
