--- a/views/search_form.tt
+++ b/views/search_form.tt
@@ -4,7 +4,7 @@
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="search_form" aria-haspopup="true">
             Search
         </button>
-        <form id="search_form" class="dropdown-menu" role="search" action="/data" method="get">
+        <form id="search_form" class="dropdown-menu" role="search" action="/[% layout.identifier %]/data" method="get">
             <div class="form-group">
                 <label for="search_text">Search (use * as wildcard):</label>
                 <input id="search_text" type="text" name="search_text" class="form-control" value="[% search | html_entity %]">
