--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -26,7 +26,7 @@
 [% BLOCK search %]
     [% IF instance_name %]
         <div class="quicksearch-container col-md-3">
-            <form method="get" action="/data" class="quicksearch">
+            <form method="get" action="/[% layout.identifier %]/data" class="quicksearch">
                     <label for="quick-search">Search [% instance_name | html %] table</label>
                     <input class="form-control" id="quick-search" name="search_text" placeholder="Use * for wildcard" value="[% search | html_entity %]">
                 <button class="btn btn-xs btn-primary" type="submit">Go</button>
