--- a/views/snippets/record_edit.tt
+++ b/views/snippets/record_edit.tt
@@ -6,13 +6,13 @@
         [% ELSE %]
             <li role="presentation"><a role="menuitem" href="/edit/[% record.current_id %]">Edit record</a></li>
         [% END %]
-        <li role="presentation"><a role="menuitem" href="/edit/?from=[% record.current_id %]">Copy record</a></li>
+        <li role="presentation"><a role="menuitem" href="/[% layout.identifier %]/edit/?from=[% record.current_id %]">Copy record</a></li>
         <li role="presentation"><a role="menuitem" href="/record/[% record.current_id %]?pdf">Download as PDF</a></li>
         [% IF layout.user_can("create_child") AND NOT record.parent_id AND layout.has_children %]
-            <li role="presentation"><a role="menuitem" href="/edit/?child=[% record.current_id %]">Create child record</a></li>
+            <li role="presentation"><a role="menuitem" href="/[% layout.identifier %]/edit/?child=[% record.current_id %]">Create child record</a></li>
         [% END %]
         [% IF user.permission.link %]
-            <li role="presentation"><a role="menuitem" href="/link/[% record.current_id %]">Link record</a></li>
+            <li role="presentation"><a role="menuitem" href="/[% layout.identifier %]/link/[% record.current_id %]">Link record</a></li>
         [% END %]
         [% IF record.user_can_delete %]
             <li role="presentation"><a role="menuitem" href="" data-toggle="modal" data-target="#modaldelete">Delete</a></li>
