--- a/views/view.tt
+++ b/views/view.tt
@@ -120,7 +120,7 @@
             <button id="saveview" type="submit" name="update" value="update" class="btn btn-primary" onclick="UpdateFilter()">
                 Save
             </button>
-            <a href="/data" class="btn btn-default">Cancel</a>
+            <a href="/[% layout.identifier %]/data" class="btn btn-default">Cancel</a>
             [% IF view_edit.id AND NOT clone %]
                 <a href="" class="btn btn-default" data-toggle="modal" data-target="#myModal">Delete</a>
             [% END %]
