Change from vis.js to forked timeline.js

--- a/handlebars/timelineitem.handlebars
+++ b/handlebars/timelineitem.handlebars
@@ -10,6 +10,6 @@
         <a href="/edit/{{current_id}}">Edit item</a>
     </div>
 </div>
-<div class="vis-item-shown-content">
+<div class="timeline-item-shown-content">
     {{content}}
 </div>
