Do not fetch all filtered curval values on edit page load

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -972,6 +972,8 @@
 
         IF page == "bulk";
             values = column.all_values;
+        ELSIF column.has_subvals;
+            values = column.selected_values(editvalue);
         ELSE;
             values = column.filtered_values;
         END;
