Add option to disable show-blanks functionality

--- a/views/record.tt
+++ b/views/record.tt
@@ -29,7 +29,9 @@
         [% END %]
     </ul>
 </div>
-<button class="btn btn-default pull-right click-to-view-blank" type="button" aria-expanded="false">Show blank values</button>
+[% UNLESS layout.no_hide_blank %]
+    <button class="btn btn-default pull-right click-to-view-blank" type="button" aria-expanded="false">Show blank values</button>
+[% END %]
 <div class="btn-group">
     [% IF user_can_edit AND NOT record.deleted %]
         [% PROCESS snippets/record_edit.tt %]
