--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -17,7 +17,7 @@
         [% IF col.topic != last_topic %]
             <tr><th colspan="2"><h2>[% col.topic OR "Other" | html %]</h2></tr>
         [% END %]
-        <tr [% IF col.data.blank %]class="click-to-view-blank-field expandable"[% END %]>
+        <tr [% IF col.data.blank AND NOT layout.no_hide_blank %]class="click-to-view-blank-field expandable"[% END %]>
             <th>[% col.name | html_entity %]</th>
             <td class="[% col.type %]">
                 [% render_datum(col, 'full') %]
