--- a/views/snippets/record_edit.tt
+++ b/views/snippets/record_edit.tt
@@ -25,7 +25,7 @@
     <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form role="form" method="post" enctype="multipart/form-data" action="/edit/">
+                <form role="form" method="post" enctype="multipart/form-data" action="/edit/[% record.current_id %]">
                 <input type="hidden" name="csrf_token" value="[% csrf_token %]">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
