Fix and improve page rendering on IE10

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
         [% IF page == "data" AND viewtype == "graph" %]
-            <meta http-equiv="X-UA-Compatible" content="IE=8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
         [% ELSE %]
-            <meta http-equiv="X-UA-Compatible" content="IE=8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
         [% END %]
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
