Revert "Fix edit link in record modal"
This reverts commit 4876c2ad4381d5673a09442bfa0ef50b32c03ce5.

--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -2,7 +2,7 @@
 [% PROCESS snippets/rag_legend.tt IF has_rag_column %]
 
 [% IF with_edit %]
-    <p><a href="/edit/[% record.current_id %]">Edit record</a></p>
+    <p><a href="/edit/[% record.current_id %]?oi=[% record.instance_id %]">Edit record</a></p>
 [% END %]
 
 <table class="table table-striped">
