Insert line breaks when viewing multi-line string fields

--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -69,7 +69,7 @@
             [% string.html %]
         [% END %]
     [% ELSE %]
-        [% string.raw | html %]
+        [% string.html %]
     [% END %]
 [% END %]
 
