Use token to prevent multiple new record submissions

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -110,6 +110,7 @@
     [% END %]
 >
     <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+    <input type="hidden" name="submission_token" value="[% submission_token %]">
     [% IF modal %]
         <p role="alert" class="alert alert-danger" hidden></p>
     [% END %]
